compiler-core/src/parse/snapshots/gleam_core__parse__tests__no_let_binding_snapshot_3.snap
---
source: compiler-core/src/parse/tests.rs
assertion_line: 476
expression: "let bar:Int = 32\n        bar = 42"
---
error: Syntax error
  ┌─ /src/parse/error.gleam:2:13
  │
2 │         bar = 42
  │             ^ There must be a 'let' to bind variable to value

Hint: Use let for binding.
See: https://tour.gleam.run/basics/assignments/
